# floxenvs

./: .gitignore  .gitleaks.toml  .yamllint.yaml  AGENTS.md  Justfile  README.md  ai-catalog.json  data.json  flake.nix  index.html  llms.txt  robots.txt  sitemap-0.xml  sitemap-index.xml
.devcontainer/: devcontainer.json
.flox/: .gitignore  env.json
.github/: AGENTS.md  dependabot.yml
.semgrep/: flox.yaml  run-tests.sh
.website/: README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
1password/: README.md  manifest-comments.toml  meta.yaml  test.sh
1password-demo/: README.md  test.sh
ComfyUI/: test.sh
_astro/: AffinityGraph.BuNYSgUj.js  AiEnvBuilder.DP2758Jt.js  AiRoleFilter.CNhhVHzh.js  AiRoleFilter.CmOFBDSg.js  _slug_.-oWFeFlK.css  _slug_.BLVSjBET.css  _slug_.BNkIbnqI.css  _slug_.BYNwMe91.css  _slug_.BsYdgEa6.css  _slug_.BwxxlVGX.css  _slug_.CDC4eiWZ.css  _slug_.CnPZkX6G.css  _slug_.DxhFvcA2.css  _slug_.ReZkd3kR.css  _slug_._1XZMGIe.css  client.CGeMu__o.js  client.jY0VId2H.js  hooks.module.DY8UAKXn.js  index.DSBovuvi.css  signals.module.CNoDtq_U.js  signals.module.DkbzzZiw.js
a-perfect-shell/: test.sh
agentmemory/: README.md  meta.yaml  test.sh
agentmemory-demo/: README.md  test.sh
airbyte/: test.sh
anthropic/: manifest.toml
basic-memory/: README.md  meta.yaml  test.sh
basic-memory-demo/: README.md  test.sh
go/: go.mod  (+3 more)
python/: pyproject.toml
python-poetry-demo/: README.md  pyproject.toml  test.sh
python-poetry-demo/.flox/: env.json
python-poetry-demo/.flox/env/: manifest.toml
python/.flox/env/: manifest.toml
(+105723 files in other folders)
