[project]
name = "flox-poetry-example"
version = "0.1.0"
description = ""
#authors = ["Your Name <you@example.com>"]
#license = "MIT"
dependencies = [
    "pyjokes",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyjokes = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[build-system]
#requires = ["setuptools>=40.8.0"]
